product-gateway-service-mesh/istio/product-grpc-istio.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
##################################################################################################
# Base Product service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: baseproduct
  labels:
    app: baseproduct
spec:
  ports:
  - name: grpc
    port: 6565
  selector:
    app: baseproduct
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: baseproduct-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: baseproduct
        version: v1
    spec:
      containers:
      - name: baseproduct
        image: docker/baseproduct
        imagePullPolicy: Never
        ports:
        - containerPort: 6565
---
##################################################################################################
# Inventory service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  ports:
  - name: grpc
    port: 6566
  - name: http
    port: 9091
  selector:
    app: inventory
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventory-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
      - name: inventory
        image: docker/inventory
        imagePullPolicy: Never
        ports:
        - containerPort: 6566
---
##################################################################################################
# Price service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: price
  labels:
    app: price
spec:
  ports:
  - name: grpc
    port: 6567
  selector:
    app: price
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: price-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: price
        version: v1
    spec:
      containers:
      - name: price
        image: docker/price
        imagePullPolicy: Never
        ports:
        - containerPort: 6567
---
##################################################################################################
# Reviews  service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
spec:
  ports:
  - name: grpc
    port: 6568
  selector:
    app: reviews
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      containers:
      - name: reviews
        image: docker/reviews
        imagePullPolicy: Never
        ports:
        - containerPort: 6568
---
##################################################################################################
# Product-gateway service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: product-gateway
  labels:
    app: product-gateway
spec:
  ports:
  - port: 9999
    name: http
  selector:
    app: product-gateway
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: product-gateway-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: product-gateway
        version: v1
    spec:
      containers:
      - name: product-gateway
        image: docker/product-gateway
        imagePullPolicy: Never
        ports:
        - containerPort: 9999
---
###########################################################################
# Ingress resource (gateway)
##########################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /productInventory/.*
        backend:
          serviceName: inventory
          servicePort: 9091
      - path: /product/.*
        backend:
          serviceName: product-gateway
          servicePort: 9999
---
